--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         #dialogText {
-            color: white;
+            color: red;
             background-color: #333333;
         }
         
@@ -118,7 +118,7 @@
     <div id="dialogWrap">
         <div id="dialogWrapCell">
             <div id="mainDialog">
-                <div id="dialogText">hmu @vanilahz or unxw#9625 for the pass :)</div>
+                <div id="dialogText">enter password below</div>
                 <div id="passArea">
                     <p id="passwordPrompt">Password</p>
                     <input id="pass" type="password" name="pass" autofocus>
