--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div id="dialogWrap">
         <div id="dialogWrapCell">
             <div id="mainDialog">
-                <div id="dialogText">enter password below</div>
+                <div id="dialogText">Enter password below</div>
                 <div id="passArea">
                     <p id="passwordPrompt">Password</p>
                     <input id="pass" type="password" name="pass" autofocus>
