--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             box-shadow: 3px 3px 5px 3px #AAAAAA;
             margin-left: auto;
             margin-right: auto;
-            background-color: #FFFFFF;
+            background-color: green;
             overflow: hidden;
             text-align: left;
         }
