--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
         #passArea {
             padding: 20px 30px;
-            background-color: white;
+            background-color: green;
         }
         #passArea > * {
             margin: 5px auto;
@@ -83,7 +83,7 @@
             font-size: 20px;
             border-radius: 5px;
             background-color: #E7E7E7;
-            border: solid gray 1px;
+            border: solid blue 1px;
             float: right;
             cursor: pointer;
         }
