--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
         #passArea {
             padding: 20px 30px;
-            background-color: green;
+            background-color: #1a66ff;
         }
         #passArea > * {
             margin: 5px auto;
